<resources>
    <string name="app_name">distributor_ikan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="input_phone">No hp</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome">Selamat Datang</string>

</resources>
